feat[poll-service]: implement the fallback, circuit breaker and retry config for poll service